--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,8 +22,26 @@
             <Setter Property="FontStyle" Value="Normal"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
         </Style>
+        <Style x:Key="StaticButton" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" BorderThickness="0" BorderBrush="Black" Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Opacity" Value="0.8" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
-    <Grid>
+    <Grid x:Name="gdMain">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="100"/>
@@ -47,7 +65,7 @@
 
         <ScrollViewer VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Disabled" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5" Margin="0,35,0,0" >
             <StackPanel Orientation="Vertical">
-                <Grid x:Name="UserInput" >
+                <Grid x:Name="gdUserInput" >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="80"/>
                         <RowDefinition Height="80"/>
@@ -60,14 +78,19 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Mobile No:" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" FontSize="15"/>
-                    <TextBox x:Name="txtMobileNo" adorners:Watermark.Text="xxxxxxxxxx" Margin="5" Grid.Column="1" adorners:Watermark.TextStyle="{StaticResource AdornerTextStyleCenter}" Height="40"   FontSize="15" />
-                    <Button x:Name="btnGenerateOTP" Content="Get OTP" Width="100" Height="40" Grid.Column="2" HorizontalAlignment="Left" />
-                    <TextBlock Text="OTP:" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Grid.Row="1" Visibility="Hidden"/>
-                    <TextBox x:Name="txtOTP" Visibility="Hidden" Height="40" Margin="5" Grid.Column="1"  Grid.Row="1" adorners:Watermark.Text="xxxx" adorners:Watermark.TextStyle="{StaticResource AdornerTextStyleCenter}"  FontSize="15" />
-                    <Button x:Name="btnValidateOTP" Content="Validate OTP" Width="100" Height="40" Grid.Column="2" HorizontalAlignment="Left"  Grid.Row="1" Visibility="Hidden"/>
-                    <Button x:Name="btnResetValidation" Content="Reset" Width="100" Height="40" Grid.Column="3" Margin="4,0,0,0" HorizontalAlignment="Left"  Grid.Row="1" Visibility="Hidden"/>
+                    <TextBox x:Name="txtMobileNo" adorners:Watermark.Text="xxxxxxxxxx" Margin="5" Grid.Column="1" TextChanged="txtMobileNo_TextChanged"
+                             adorners:Watermark.TextStyle="{StaticResource AdornerTextStyleCenter}" Height="40" VerticalContentAlignment="Center"  FontSize="15" />
+                    <Button x:Name="btnGenerateOTP" Content="Get OTP" Width="100" Height="40" Grid.Column="2" Click="btnGenerateOTP_Click"
+                            HorizontalAlignment="Left" IsEnabled="False"  />
+                    <TextBlock x:Name="txtblkOTP" Text="OTP:" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Grid.Row="1" Visibility="Hidden"/>
+                    <TextBox x:Name="txtOTP" Visibility="Hidden" Height="40" Margin="5" Grid.Column="1"  Grid.Row="1" TextChanged="txtOTP_TextChanged"  VerticalContentAlignment="Center"
+                             adorners:Watermark.Text="xxxx" adorners:Watermark.TextStyle="{StaticResource AdornerTextStyleCenter}"  FontSize="15" />
+                    <Button x:Name="btnValidateOTP" Content="Validate OTP" Width="100" Height="40" Grid.Column="2" Click="btnValidateOTP_Click"
+                            HorizontalAlignment="Left"  Grid.Row="1" Visibility="Hidden" IsEnabled="False"/>
+                    <Button x:Name="btnResetValidation" Content="Reset" Width="100" Height="40" Grid.Column="3" Margin="4,0,0,0" Click="btnResetValidation_Click"
+                            HorizontalAlignment="Left"  Grid.Row="1" Visibility="Hidden"/>
                 </Grid>
-                <Grid x:Name="gdFeedBackMain" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Visibility="Visible">
+                <Grid x:Name="gdFeedBackMain"  Visibility="Hidden">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50"/>
                         <RowDefinition Height="50"/>
@@ -80,7 +103,8 @@
                     </Grid.ColumnDefinitions>
                 
                     <Border BorderThickness="1" BorderBrush="Black" CornerRadius="10" Padding="2" Grid.ColumnSpan="2" Margin="15,0,15,0">
-                        <TextBox x:Name="txtUserName" Margin="10,0,0,0" adorners:Watermark.Text="User Name" adorners:Watermark.TextStyle="{StaticResource AdornerTextStyleCenter}" BorderThickness="0" FontSize="15"  />
+                        <TextBox x:Name="txtUserName" Margin="10,0,0,0" adorners:Watermark.Text="User Name" VerticalContentAlignment="Center" 
+                                 adorners:Watermark.TextStyle="{StaticResource AdornerTextStyleCenter}" BorderThickness="0" FontSize="15"  />
                     </Border>
                     <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2">
                         <TextBlock Text="PLEASE RATE YOUR EXPERIANCE" FontSize="15" Margin="20,10,0,0" VerticalAlignment="Center" />
@@ -96,14 +120,17 @@
                             <System_Windows_Controls:RatingItem Content=""/>
                         </System_Windows_Controls:Rating>
                     </StackPanel>
-                    <Border BorderThickness="1" BorderBrush="Black" CornerRadius="10" Padding="2" Grid.Row="2" Grid.ColumnSpan="2" Margin="15,15,15,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                        <TextBox x:Name="txtUserCommnets"  Margin="10,15,15,15" FontSize="15" adorners:Watermark.Text="Please Write Here" adorners:Watermark.TextStyle="{StaticResource AdornerTextStyleTop}" BorderBrush="Transparent"  BorderThickness="0"  AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" HorizontalContentAlignment="Left" VerticalContentAlignment="Top"/>
+                    <Border x:Name="brdComment" BorderThickness="1" BorderBrush="Black" CornerRadius="10" Padding="2" Grid.Row="2" Grid.ColumnSpan="2" Margin="15,15,15,0">
+                        <TextBox x:Name="txtUserCommnets"  Margin="10,15,15,15" FontSize="15" adorners:Watermark.Text="Please Write Here" VerticalScrollBarVisibility="Auto"
+                                 adorners:Watermark.TextStyle="{StaticResource AdornerTextStyleTop}" BorderBrush="Transparent"  BorderThickness="0"  AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" HorizontalContentAlignment="Left" VerticalContentAlignment="Top"/>
                     </Border>
                     <Border BorderThickness="2" BorderBrush="Black" Background="Orange" Grid.Row="3" HorizontalAlignment="Right" CornerRadius="15" Margin="0,10,15,0">
-                        <Button x:Name="btnSaveFB" Content="SUBMIT" Width="100" BorderThickness="0" Background="Transparent" FontWeight="Bold" FontSize="15"/>
+                        <Button x:Name="btnSaveFB" Content="SUBMIT" Foreground="White" Width="100" BorderThickness="0" Background="Transparent" Click="btnSaveFB_Click" 
+                                Style="{StaticResource StaticButton}" FontWeight="Bold" FontSize="15"/>
                     </Border>
                     <Border BorderThickness="2" BorderBrush="Black" Background="LightGray" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" CornerRadius="15" Margin="0,10,15,0">
-                        <Button x:Name="btnCancel" Content="CANCEL" Width="100" BorderThickness="0" Background="Transparent" FontWeight="Bold" FontSize="15"/>
+                        <Button x:Name="btnCancel" Content="CANCEL" Width="100" BorderThickness="0" Background="Transparent" FontWeight="Bold" FontSize="15" 
+                                Style="{StaticResource StaticButton}" Click="btnCancel_Click"/>
                     </Border>
                 </Grid>
             </StackPanel>
